@@ -248,6 +248,8 @@ scheme_make_struct_names
 scheme_make_struct_type
 scheme_make_struct_instance
 scheme_is_struct_instance
+scheme_struct_ref
+scheme_struct_set
 scheme_is_subclass
 scheme_is_implementation
 scheme_is_interface_extension
