@@ -303,6 +303,8 @@
 #define scheme_make_struct_type (scheme_extension_table->scheme_make_struct_type)
 #define scheme_make_struct_instance (scheme_extension_table->scheme_make_struct_instance)
 #define scheme_is_struct_instance (scheme_extension_table->scheme_is_struct_instance)
+#define scheme_struct_ref (scheme_extension_table->scheme_struct_ref)
+#define scheme_struct_set (scheme_extension_table->scheme_struct_set)
 #ifndef NO_OBJECT_SYSTEM
 #define scheme_is_subclass (scheme_extension_table->scheme_is_subclass)
 #define scheme_is_implementation (scheme_extension_table->scheme_is_implementation)
